Añado paragrafo a index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hola</title>
 </head>
 <body>
-    
+    <p>
+        hola esto es un paragrafo para git. jeh
+    </p>
 </body>
 </html>
